--- a/portfolio.html
+++ b/portfolio.html
@@ -26,12 +26,12 @@
                 <a class="menu-link link"  href="./portfolio.html">Portfolio</a>   
             </li>
             <li class="menu-item">
-                <a class="menu-link link" href="#">Contacts</a>   
+                <a class="menu-link link" href="tel:+110001111111">Contacts</a>   
             </li>
         </ul> 
     </nav>
     
-     <address class="page-contact ">
+     <address class="page-contact list ">
         <ul class="contact-list">
                
             <li class="contact-item list">
