--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     </ul> 
 </nav>
 
-<address class="page-contact ">
+<address class="page-contact  list ">
 
-    <ul class="contact-list">
+    <ul class="contact-list list">
            
         <li class="contact-item list">
             <a class="contact link " href="mailto:info@devstudio.com" >info@devstudio.com</a>  
@@ -65,7 +65,7 @@
        
    <section class="about">
 
-                <h2 class="section-title hidden"> Our Achievements</h2>
+                <h2 hidden > Our Achievements</h2>
                 <ul class="about-list list">
 
                     <li class="about-item">  
