--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
         <button  type="button" class="button"> All</button>
     </li>
     <li class="filter-item">
-        <button  type="button" class="button"> Web site</button>
+        <button  type="button" class="button"> Web Site</button>
     </li>
     <li class="filter-item">
         <button  type="button" class="button"> App</button>
@@ -71,7 +71,7 @@
 </ul>
        <!--Row1-->           
             <ul class="row-list list">
-                <li class="row-item link">
+                <li class="row-item  link">
                     <img src="./images/row1-card1.img.jpg" alt="Banking" width="360" height="300">
                   <h2 class="row-title">Banking App Interface Concept</h2>
                   <p class="row-place">App</p>
@@ -88,7 +88,7 @@
         <!--Row2-->
         
             <ul class="row-list list">
-                <li class="row-item">
+                <li class="row-item link">
                     <img src="./images/row2-card1.img.jpg" alt="Taxi" width="360" height="300">
                   <h2 class="row-title">Taxi Service</h2>
                   <p class="row-place">Marketing</p>
@@ -106,7 +106,7 @@
         <!--Row3-->
     
             <ul class="row-list list">
-                <li class="row-item">
+                <li class="row-item link">
                     <img src="./images/row3-card1.img.jpg" alt="Stories" width="360" height="300">
                   <h2 class="row-title">Instagram Stories Concept</h2>
                   <p class="row-place">Design</p>
