--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <a class="logo link "  href="./index.html">Web<span class="logo-text logo-theme-light">Studio</span></a> 
    
     <ul class="menu list">
-        <li class="menu-item " >
+        <li class="menu-item" >
          <a class="menu-link link" href="./index.html">Studio</a>   
         </li>
         <li class="menu-item">
@@ -65,7 +65,7 @@
        
    <section class="about">
 
-                <h2 hidden > Our Achievements</h2>
+                <h2 class="section-title" hidden > Our Achievements</h2>
                 <ul class="about-list list">
 
                     <li class="about-item">  
