--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,7 @@
        <!--Row-->           
             <ul class="row-list  link list">
                 <li class="row-item  link">
-                    <img src="./images/row1-card1.img.jpg" alt="Banking" width="360" height="300">
+                    <img class="link" src="./images/row1-card1.img.jpg" alt="Banking" width="360" height="300">
                   <h2 class="row-title">Banking App Interface Concept</h2>
                   <p class="row-place">App</p>
                 </li>
