--- a/portfolio.html
+++ b/portfolio.html
@@ -74,16 +74,18 @@
             <ul class="row-list  link list">
                 <li class="row-item ">
                     <a href="" class="link"> 
-                    <img class="link" src="./images/row1-card1.img.jpg" alt="Banking" width="360" height="300">
+                    <img  src="./images/row1-card1.img.jpg" alt="Banking" width="360" height="300">
                      <h2 class="row-title">Banking App Interface Concept</h2>
                      <p class="row-place">App</p></a>
                 </li>
+
                 <li class="row-item">
                     <a href=" "  class="link"> 
                     <img src="./images/row1-card2.img.jpg" alt="Payment" width="360" height="300">
                     <h2 class="row-title">Cashless Payment</h2>
                     <p class="row-place">Marketing</p></a>
                 </li>
+
                 <li class="row-item">
                     <a href="" class="link"> 
                    <img src="./images/row1-card3.img.jpg" alt="Meditation" width="360" height="300">
@@ -97,12 +99,14 @@
                     <h2 class="row-title">Taxi Service</h2>
                     <p class="row-place">Marketing</p></a>
                 </li>
+
                 <li class="row-item">
                     <a href="" class="link"> 
                    <img src="./images/row2-card2.img.jpg" alt="Screen" width="360" height="300">
                     <h2 class="row-title">Screen Illustrations</h2>
                     <p class="row-place">Design</p></a>
                 </li>
+
                 <li class="row-item">
                     <a href="" class="link"> 
                    <img src="./images/row2-card3.img.jpg" alt="Courses" width="360" height="300">
@@ -116,12 +120,14 @@
                     <h2 class="row-title">Instagram Stories Concept</h2>
                     <p class="row-place">Design</p></a>
                 </li>
+
                 <li class="row-item"> 
                     <a href="" class="link"> 
                      <img src="./images/row3-card2.img.jpg" alt="Food" width="360" height="300">
                     <h2 class="row-title">Organic Food</h2>
                     <p class="row-place">Web Site</p></a>
                 </li>
+                
                 <li class="row-item"> 
                     <a href="" class="link"> 
                      <img src="./images/row3-card3.img.jpg" alt="Coffe" width="360" height="300">
