--- a/portfolio.html
+++ b/portfolio.html
@@ -74,63 +74,63 @@
             <ul class="row-list  link list">
                 <li class="row-item ">
                     <a href="" class="link"> 
-                    <img  src="./images/row1card1.img.jpg" alt="Banking" width="360" height="300">
+                    <img  src="./images/row1card1.jpg" alt="Banking" width="360" height="300">
                      <h2 class="row-title">Banking App Interface Concept</h2>
                      <p class="row-place">App</p></a>
                 </li>
 
                 <li class="row-item">
                     <a href=" "  class="link"> 
-                    <img src="./images/row1card2.img.jpg" alt="Payment" width="360" height="300">
+                    <img src="./images/row1card2.jpg" alt="Payment" width="360" height="300">
                     <h2 class="row-title">Cashless Payment</h2>
                     <p class="row-place">Marketing</p></a>
                 </li>
 
                 <li class="row-item">
                     <a href="" class="link"> 
-                   <img src="./images/row1card3.img.jpg" alt="Meditation" width="360" height="300">
+                   <img src="./images/row1card3.jpg" alt="Meditation" width="360" height="300">
                     <h2 class="row-title">Meditation App</h2>
                     <p class="row-place">App</p></a>
                 </li>
           
                 <li class="row-item link">
                     <a href="" class="link"> 
-                    <img src="./images/row2card1.img.jpg" alt="Taxi" width="360" height="300">
+                    <img src="./images/row2card1.jpg" alt="Taxi" width="360" height="300">
                     <h2 class="row-title">Taxi Service</h2>
                     <p class="row-place">Marketing</p></a>
                 </li>
 
                 <li class="row-item">
                     <a href="" class="link"> 
-                   <img src="./images/row2card2.img.jpg" alt="Screen" width="360" height="300">
+                   <img src="./images/row2card2.jpg" alt="Screen" width="360" height="300">
                     <h2 class="row-title">Screen Illustrations</h2>
                     <p class="row-place">Design</p></a>
                 </li>
 
                 <li class="row-item">
                     <a href="" class="link"> 
-                   <img src="./images/row2card3.img.jpg" alt="Courses" width="360" height="300">
+                   <img src="./images/row2card3.jpg" alt="Courses" width="360" height="300">
                     <h2 class="row-title">Online Courses</h2>
                     <p class="row-place">Marketing </p></a>
                 </li>
                 
                 <li class="row-item link">
                     <a href="" class="link"> 
-                    <img src="./images/row3card1.img.jpg" alt="Stories" width="360" height="300">
+                    <img src="./images/row3card1.jpg" alt="Stories" width="360" height="300">
                     <h2 class="row-title">Instagram Stories Concept</h2>
                     <p class="row-place">Design</p></a>
                 </li>
 
                 <li class="row-item"> 
                     <a href="" class="link"> 
-                     <img src="./images/row3card2.img.jpg" alt="Food" width="360" height="300">
+                     <img src="./images/row3card2.jpg" alt="Food" width="360" height="300">
                     <h2 class="row-title">Organic Food</h2>
                     <p class="row-place">Web Site</p></a>
                 </li>
 
                 <li class="row-item"> 
                     <a href="" class="link"> 
-                     <img src="./images/row3card3.img.jpg" alt="Coffe" width="360" height="300">
+                     <img src="./images/row3card3.jpg" alt="Coffe" width="360" height="300">
                     <h2 class="row-title">Fresh Coffee</h2>
                     <p class="row-place">Web Site </p></a>
                 </li>
